@@ -1,3 +1,9 @@
+2014-01-10  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/56060
+	PR c++/59730
+	* pt.c (type_dependent_expression_p): Handle EXPR_PACK_EXPANSION.
+
 2013-12-12  Jason Merrill  <jason@redhat.com>
 
 	PR c++/58954
